@@ -1,8 +1,11 @@
 package server.infrastructure.root.api;
 
+import com.alibaba.fastjson2.JSON;
 import com.alibaba.fastjson2.JSONObject;
 import com.alibaba.fastjson2.JSONReader;
 import framework.web.annotations.*;
+import framework.web.annotations.url.Nullable;
+import framework.web.annotations.url.QueryFlag;
 import framework.web.error.BadRequest;
 import framework.web.request.Request;
 import framework.web.route.RouteParameter;
@@ -15,7 +18,9 @@ import server.infrastructure.param.auth.RequireOrganizer;
 import server.infrastructure.param.auth.UserSession;
 import framework.util.SqlSerde;
 
+import java.sql.ResultSet;
 import java.sql.SQLException;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
 
@@ -34,81 +39,90 @@ public class EventAPI {
     }
 
     public static class Event{
-            public long id;
-            public long owner_id;
-            public String name;
-            public String description;
-            public long start;
-            public long duration;
-            public String category;
-            public String type;
-            public long picture;
-            public JSONObject metadata;
-            public int available_total_tickets;
-            public boolean draft;
+            public final long id;
+            public final long owner_id;
+            public final String name;
+            public final String description;
+            public final long start;
+            public final long duration;
+            public final String category;
+            public final String type;
+            public final long picture;
+            public final JSONObject metadata;
+            public final long available_total_tickets;
+            public final boolean draft;
 
-            public String location_name;
-            public double location_lat;
-            public double location_long;
+            public final String location_name;
+            public final double location_lat;
+            public final double location_long;
+
+            public final List<String> tags;
+            public final AccountAPI.PublicUserInfo owner;
+
+            public Event(ResultSet rs, boolean read_user) throws SQLException {
+                this.id = rs.getLong("id");
+                this.owner_id = rs.getLong("owner_id");
+                this.name = rs.getString("name");
+                this.description = rs.getString("description");
+                this.start = rs.getLong("start");
+                this.duration = rs.getLong("duration");
+                this.category = rs.getString("category");
+                this.type = rs.getString("type");
+                this.picture = rs.getLong("picture");
+                this.metadata = Optional.ofNullable(rs.getString("metadata")).map(JSON::parseObject).orElse(null);
+                this.available_total_tickets = rs.getLong("available_total_tickets");
+                this.draft = rs.getBoolean("draft");
+                this.location_name = rs.getString("location_name");
+                this.location_lat = rs.getDouble("location_lat");
+                this.location_long = rs.getDouble("location_long");
+                this.tags = new ArrayList<>();
+                this.owner = read_user? AccountAPI.PublicUserInfo.make(rs):null;
+            }
     }
 
-    public static class EventTag{
-        public String tag;
-
-        public EventTag(){}
-
-        public EventTag(String tag) {
-            this.tag = tag;
-        }
-    }
-
-    public record AllEvent(
-            Event event,
-            List<EventTag> tags
-    ){}
-
-    @Route("/get_event/<id>")
-    public static @Json AllEvent get_event(@FromRequest(OptionalAuth.class) UserSession session, RoTransaction trans, @Path long id) throws SQLException, BadRequest {
+    @Route("/get_event/<event_id>")
+    public static @Json Event get_event(@FromRequest(OptionalAuth.class) UserSession session, RoTransaction trans, @Path long event_id, @QueryFlag boolean with_owner) throws SQLException, BadRequest {
         Event event;
-        try(var stmt = trans.namedPreparedStatement("select * from events where (id=:id AND draft=false) OR (id=:id AND owner_id=:owner_id)")){
-            stmt.setLong(":id", id);
-            if(session!=null)
-                stmt.setLong(":owner_id", session.user_id);
-            var result = SqlSerde.sqlList(stmt.executeQuery(), Event.class);
+        var sql = "select * from events";
+        if(with_owner) sql += " inner join users on users.id=events.owner_id";
+        sql += " where (events.id=:event_id AND events.draft=false) OR (events.id=:event_id AND events.owner_id=:owner_id)";
+        try(var stmt = trans.namedPreparedStatement(sql)){
+            stmt.setLong(":event_id", event_id);
+            stmt.setLong(":owner_id", session!=null?session.user_id:0);
+            var result = SqlSerde.sqlList(stmt.executeQuery(), rs -> new Event(rs, with_owner));
             if(result.isEmpty())
                 throw new BadRequest("Event doesn't exist or you do not have permission to view it");
             if(result.size()>1)
                 throw new SQLException("Expected single value found multiple");
-            event = result.get(0);
+            event = result.getFirst();
         }
 
-        List<EventTag> tags;
         try(var stmt = trans.namedPreparedStatement("select * from event_tags where event_id=:event_id")){
             stmt.setLong(":event_id", event.id);
-            tags = SqlSerde.sqlList(stmt.executeQuery(), EventTag.class);
+            SqlSerde.sqlForEach(stmt.executeQuery(), rs -> event.tags.add(rs.getString("tag")));
         }
         trans.commit();
 
-        return new AllEvent(event, tags);
+        return event;
     }
 
     @SuppressWarnings("OptionalUsedAsFieldOrParameterType")
     public static class UpdateEvent{
-        Optional<String> name;
-        Optional<String> description;
-        Optional<JSONObject> metadata;
+        public Optional<String> name;
+        public Optional<String> description;
+        public Optional<JSONObject> metadata;
 
-        Optional<String> type;
-        Optional<String> category;
+        public Optional<String> type;
+        public Optional<String> category;
 
-        Optional<Long> start;
-        Optional<Long> duration;
+        public Optional<Long> start;
+        public Optional<Long> duration;
 
-        Optional<Long> available_total_tickets;
+        public Optional<Long> available_total_tickets;
 
-        Optional<String> location_name;
-        Optional<Double> location_lat;
-        Optional<Double> location_long;
+        public Optional<String> location_name;
+        public Optional<Double> location_lat;
+        public Optional<Double> location_long;
 
         private static Optional<String> optionalString(JSONReader reader){
             if(reader.nextIfNull())
@@ -145,6 +159,8 @@ public class EventAPI {
             else
                 throw new RuntimeException("Expected object value");
         }
+
+        public UpdateEvent(){}
 
         public UpdateEvent(JSONReader reader) throws BadRequest {
             if(!reader.nextIfObjectStart())
@@ -268,10 +284,15 @@ public class EventAPI {
     }
 
 
-    @Route("/add_event_tag/<id>/<tag>")
-    public static void add_event_tag(@FromRequest(RequireOrganizer.class)UserSession session, RwTransaction trans, @Path long id, @Path String tag) throws SQLException, BadRequest {
-        try(var stmt = trans.namedPreparedStatement("insert into event_tags values(:tag, :id)")){
-            stmt.setLong(":id", id);
+    @Route("/add_event_tag/<event_id>/<tag>")
+    public static void add_event_tag(@FromRequest(RequireOrganizer.class)UserSession session, RwTransaction trans, @Path long event_id, @Path String tag) throws SQLException, BadRequest {
+        try(var stmt = trans.namedPreparedStatement("select owner_id from events where id=:event_id")){
+            stmt.setLong(":event_id", event_id);
+            if(stmt.executeQuery().getLong("owner_id")!=session.user_id)
+                throw new BadRequest("Could not add tag. Tag already exists or you do now own event");
+        }
+        try(var stmt = trans.namedPreparedStatement("insert into event_tags values(:tag, :event_id)")){
+            stmt.setLong(":event_id", event_id);
             stmt.setString(":tag", tag);
             try{
                 if(stmt.executeUpdate()!=1)
@@ -283,10 +304,15 @@ public class EventAPI {
         trans.commit();
     }
 
-    @Route("/delete_event_tag/<id>/<tag>")
-    public static void delete_event_tag(@FromRequest(RequireOrganizer.class)UserSession session, RwTransaction trans, @Path long id, @Path String tag) throws SQLException, BadRequest {
+    @Route("/delete_event_tag/<event_id>/<tag>")
+    public static void delete_event_tag(@FromRequest(RequireOrganizer.class)UserSession session, RwTransaction trans, @Path long event_id, @Path String tag) throws SQLException, BadRequest {
+        try(var stmt = trans.namedPreparedStatement("select owner_id from events where id=:event_id")){
+            stmt.setLong(":event_id", event_id);
+            if(stmt.executeQuery().getLong("owner_id")!=session.user_id)
+                throw new BadRequest("Could not add tag. Tag already exists or you do now own event");
+        }
         try(var stmt = trans.namedPreparedStatement("delete from event_tags where tag=:tag AND event_id=:event_id")){
-            stmt.setLong(":id", id);
+            stmt.setLong(":event_id", event_id);
             stmt.setString(":tag", tag);
             if(stmt.executeUpdate()!=1)
                 throw new BadRequest("Could not remove tag. Tag does not exist or you do now own event");
@@ -335,6 +361,7 @@ public class EventAPI {
             if(media_id!=0){
                 handler.delete(media_id);
             }
+            throw e;
         }
         if(old_media!=0){
             handler.delete(old_media);
